Fluentd-Cloudwatch Changes
- Add support for awsRoles vai kube2iam role
- Add rbac create support
- Standardize helpers with other charts

--- a/incubator/fluentd-cloudwatch/templates/daemonset.yaml
+++ b/incubator/fluentd-cloudwatch/templates/daemonset.yaml
@@ -1,9 +1,9 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: {{ template "fluentd-cloudwatch.fullname" . }}
+  name: {{ template "fullname" . }}
   labels:
-    app: {{ template "fluentd-cloudwatch.name" . }}
+    app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
@@ -11,13 +11,17 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "fluentd-cloudwatch.name" . }}
+        app: {{ template "name" . }}
         release: "{{ .Release.Name }}"
       annotations:
+        {{ if .Values.awsRole }}iam.amazonaws.com/role: {{ .Values.awsRole }}{{ end }}
+{{- if .Values.podAnnotations }}
 {{ toYaml .Values.annotations | indent 8 }}
+{{- end }}
     spec:
+      serviceAccountName: {{ if .Values.rbac.create }}{{ template "fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
       containers:
-      - name: {{ template "fluentd-cloudwatch.fullname" . }}
+      - name: {{ template "fullname" . }}
         image: "{{ .Values.image }}:{{ .Values.imageTag }}"
         imagePullPolicy: {{ .Values.imagePullPolicy | quote }}
         #hostNetwork: {{ default false .Values.hostNetwork }}
@@ -26,7 +30,7 @@ spec:
           value: {{ .Values.awsRegion }}
         - name: LOG_GROUP_NAME
           value: {{ .Values.logGroupName }}
-
+{{- if eq .Values.awsRole "" }}
         - name: AWS_ACCESS_KEY_ID
           valueFrom:
             secretKeyRef:
@@ -37,7 +41,7 @@ spec:
             secretKeyRef:
               key: aws_secret_access_key
               name: {{ template "fluentd-cloudwatch.fullname" . }}
-
+{{- end }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
@@ -58,4 +62,4 @@ spec:
           path: /var/lib/docker/containers
       - name: config-volume
         configMap:
-          name: {{ template "fluentd-cloudwatch.fullname" . }}
+          name: {{ template "fullname" . }}
