--- a/incubator/fluentd-cloudwatch/values.yaml
+++ b/incubator/fluentd-cloudwatch/values.yaml
@@ -23,7 +23,15 @@ resources:
 annotations: {}
 
 awsRegion: us-east-1
+awsRole:
 logGroupName: kubernetes
+
+rbac:
+  ## If true, create and use RBAC resources
+  create: false
+
+  ## Ignored if rbac.create is true
+  serviceAccountName: default
 
 fluentdConfig: |
   <match fluent.**>
