--- a/incubator/fluentd-cloudwatch/templates/secrets.yaml
+++ b/incubator/fluentd-cloudwatch/templates/secrets.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.awsRole "" -}}
+{{- if not .Values.awsRole }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,4 +11,4 @@ metadata:
 type: Opaque
 data:
 {{ (.Files.Glob "secrets/*").AsSecrets | indent 2 }}
-{{- end -}}
+{{- end }}
