--- a/incubator/fluentd-cloudwatch/templates/secrets.yaml
+++ b/incubator/fluentd-cloudwatch/templates/secrets.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "fluentd-cloudwatch.fullname" . }}
+  name: {{ template "fullname" . }}
   labels:
-    app: {{ template "fluentd-cloudwatch.name" . }}
+    app: {{ template "name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
