--- a/incubator/fluentd-elasticsearch/values.yaml
+++ b/incubator/fluentd-elasticsearch/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 image:
-  repository: fluent/fluentd-kubernetes-daemonset #quay.io/coreos/fluentd-kubernetes
+  repository: fluent/fluentd-kubernetes-daemonset
   tag: v0.12-debian-elasticsearch
   pullPolicy: IfNotPresent
 
