--- a/stable/docker-registry/values.yaml
+++ b/stable/docker-registry/values.yaml
@@ -10,6 +10,8 @@ service:
   name: registry
   type: ClusterIP
   port: 5000
+  annotations: {}
+  # foo.io/bar: "true"
 ingress:
   enabled: false
   # Used to create an Ingress record.
