--- a/stable/concourse/templates/secrets.yaml
+++ b/stable/concourse/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.secrets.create }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,31 +10,42 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  host-key: {{ .Values.secrets.concourse.hostKey | b64enc | quote }}
+  host-key-pub: {{ .Values.secrets.concourse.hostKeyPub | b64enc | quote }}
+  session-signing-key: {{ .Values.secrets.concourse.sessionSigningKey | b64enc | quote }}
+  worker-key: {{ .Values.secrets.concourse.workerKey | b64enc | quote }}
+  worker-key-pub: {{ .Values.secrets.concourse.workerKeyPub | b64enc | quote }}
   {{ if .Values.postgresql.enabled }}
   postgresql-user: {{ .Values.postgresql.postgresUser | b64enc | quote }}
   {{ else }}
-  postgresql-uri: {{ .Values.postgresql.uri | b64enc | quote }}
+  postgresql-uri: {{ .Values.secrets.postgresql.uri | b64enc | quote }}
   {{ end }}
-  basic-auth-username: {{ .Values.concourse.username | b64enc | quote }}
-  basic-auth-password: {{ .Values.concourse.password | b64enc | quote }}
-  host-key: {{ .Values.concourse.hostKey | b64enc | quote }}
-  host-key-pub: {{ .Values.concourse.hostKeyPub | b64enc | quote }}
-  session-signing-key: {{ .Values.concourse.sessionSigningKey | b64enc | quote }}
-  worker-key: {{ .Values.concourse.workerKey | b64enc | quote }}
-  worker-key-pub: {{ .Values.concourse.workerKeyPub | b64enc | quote }}
-  github-auth-client-id: {{ default "" .Values.concourse.githubAuthClientId | b64enc | quote }}
-  github-auth-client-secret: {{ default "" .Values.concourse.githubAuthClientSecret | b64enc | quote }}
-  gitlab-auth-client-id: {{ default "" .Values.concourse.gitlabAuthClientId | b64enc | quote }}
-  gitlab-auth-client-secret: {{ default "" .Values.concourse.gitlabAuthClientSecret | b64enc | quote }}
-  generic-oauth-client-id: {{ default "" .Values.concourse.genericOauthClientId | b64enc | quote }}
-  generic-oauth-client-secret: {{ default "" .Values.concourse.genericOauthClientSecret | b64enc | quote }}
-  encryption-key: {{ default "" .Values.concourse.encryptionKey | b64enc | quote }}
-  old-encryption-key: {{ default "" .Values.concourse.oldEncryptionKey | b64enc | quote }}
-  {{ if .Values.credentialManager.vault }}
-  vault-ca-cert: {{ default "" .Values.credentialManager.vault.caCert | b64enc | quote }}
-  vault-client-token: {{ default "" .Values.credentialManager.vault.clientToken | b64enc | quote }}
-  vault-approle-id: {{ default "" .Values.credentialManager.vault.appRoleId | b64enc | quote }}
-  vault-approle-secret-id: {{ default "" .Values.credentialManager.vault.appRoleSecretId | b64enc | quote }}
-  vault-client-cert: {{ default "" .Values.credentialManager.vault.clientCert | b64enc | quote }}
-  vault-client-key: {{ default "" .Values.credentialManager.vault.clientKey | b64enc | quote }}
-  {{ end }}
+  {{- if .Values.concourse.encryption.enabled }}
+  encryption-key: {{ default "" .Values.secrets.concourse.encryptionKey | b64enc | quote }}
+  old-encryption-key: {{ default "" .Values.secrets.concourse.oldEncryptionKey | b64enc | quote }}
+  {{- end }}
+  {{- if .Values.concourse.basicAuth.enabled }}
+  basic-auth-username: {{ .Values.secrets.concourse.basicAuth.username | b64enc | quote }}
+  basic-auth-password: {{ .Values.secrets.concourse.basicAuth.password | b64enc | quote }}
+  {{- end }}
+  {{- if .Values.concourse.githubAuth.enabled }}
+  github-auth-client-id: {{ default "" .Values.secrets.concourse.githubAuth.clientId | b64enc | quote }}
+  github-auth-client-secret: {{ default "" .Values.secrets.concourse.githubAuth.clientSecret | b64enc | quote }}
+  {{- end }}
+  {{- if .Values.concourse.gitlabAuth.enabled }}
+  gitlab-auth-client-id: {{ default "" .Values.secrets.concourse.gitlabAuth.clientId | b64enc | quote }}
+  gitlab-auth-client-secret: {{ default "" .Values.secrets.concourse.gitlabAuth.clientSecret | b64enc | quote }}
+  {{- end }}
+  {{- if .Values.concourse.genericOauth.enabled }}
+  generic-oauth-client-id: {{ default "" .Values.secrets.concourse.genericOauth.clientId | b64enc | quote }}
+  generic-oauth-client-secret: {{ default "" .Values.secrets.concourse.genericOauth.clientSecret | b64enc | quote }}
+  {{- end }}
+  {{- if .Values.credentialManager.vault.enabled }}
+  vault-ca-cert: {{ default "" .Values.secrets.credentialManager.vault.caCert | b64enc | quote }}
+  vault-client-token: {{ default "" .Values.secrets.credentialManager.vault.clientToken | b64enc | quote }}
+  vault-approle-id: {{ default "" .Values.secrets.credentialManager.vault.appRoleId | b64enc | quote }}
+  vault-approle-secret-id: {{ default "" .Values.secrets.credentialManager.vault.appRoleSecretId | b64enc | quote }}
+  vault-client-cert: {{ default "" .Values.secrets.credentialManager.vault.clientCert | b64enc | quote }}
+  vault-client-key: {{ default "" .Values.secrets.credentialManager.vault.clientKey | b64enc | quote }}
+  {{- end }}
+{{- end }}
