Updated to pass cla/linuxfoundation-circleci requirements

--- a/incubator/mssql-linux/Chart.yaml
+++ b/incubator/mssql-linux/Chart.yaml
@@ -1,4 +1,8 @@
 apiVersion: v1
 description: SQL Server 2017 Linux Helm Chart for Kubernetes
-name: mssql
-version: 0.1.0
+name: mssql-linux
+version: 0.1.1
+icon: https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1I4Dx
+maintainers:
+- name: thomasliddledba
+  email: tliddle30@gmail.com
