--- a/stable/jenkins/values.yaml
+++ b/stable/jenkins/values.yaml
@@ -34,6 +34,8 @@ Master:
   # HostName: jenkins.cluster.local
   # NodePort: <to set explicitly, choose port between 30000-32767
   ContainerPort: 8080
+  # Enable Kubernetes Liveness and Readiness Probes
+  HealthProbes: false
   SlaveListenerPort: 50000
   LoadBalancerSourceRanges:
   - 0.0.0.0/0
