[stable/cluster-autoscaler] Bump to version 1.1.0

--- a/stable/cluster-autoscaler/templates/clusterrole.yaml
+++ b/stable/cluster-autoscaler/templates/clusterrole.yaml
@@ -83,4 +83,12 @@ rules:
     - watch
     - list
     - get
+  - apiGroups:
+    - storage.k8s.io
+    resources:
+    - storageclasses
+    verbs:
+    - watch
+    - list
+    - get
 {{- end -}}
