--- a/incubator/mssql-linux/templates/secret.yaml
+++ b/incubator/mssql-linux/templates/secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: {{ template "mssql.fullname" . }}-secret
 # type: Opaque
 data:
-  password: TXlTdHJvbmdQYXNzd29yZDExMjM/Cg==
+  password: TXlTYVBhc3N3b3JkMTIz
