Add extra config to logstash ConfigMap
This will allow people to add extra options to the config.yml file for logstash.

--- a/incubator/logstash/templates/configmap.yaml
+++ b/incubator/logstash/templates/configmap.yaml
@@ -12,3 +12,6 @@ data:
   logstash.yml: |-
     http.host: "0.0.0.0"
     path.config: /usr/share/logstash/pipeline
+{{- if .Values.configData }}
+{{ toYaml .Values.configData | indent 4 }}
+{{- end }}
