--- a/incubator/kafka/templates/tests/test_topic_create_consume_produce.yaml
+++ b/incubator/kafka/templates/tests/test_topic_create_consume_produce.yaml
@@ -16,9 +16,8 @@ spec:
       kafka-topics --zookeeper {{ template "zookeeper.url" . }} --topic helm-test-topic-create-consume-produce --create --partitions 1 --replication-factor 1 --if-not-exists && \
       # Create a message
       MESSAGE="`date -u`" && \
-      echo $MESSAGE && \
       # Produce a test message to the topic
       echo $MESSAGE | kafka-console-producer --broker-list {{ template "kafka.fullname" . }}:9092 --topic helm-test-topic-create-consume-produce && \
       # Consume a test message from the topic
-      kafka-console-consumer --bootstrap-server {{ template "kafka.fullname" . }}-headless:9092 --topic helm-test-topic-create-consume-produce --from-beginning --timeout-ms 2000 --max-messages 1
+      kafka-console-consumer --bootstrap-server {{ template "kafka.fullname" . }}-headless:9092 --topic helm-test-topic-create-consume-produce --from-beginning --timeout-ms 2000 --max-messages 1 | grep "$MESSAGE"
   restartPolicy: Never
