--- a/stable/grafana/values.yaml
+++ b/stable/grafana/values.yaml
@@ -438,7 +438,13 @@ dashboardImports:
   ## Grafana dashboard files to import as ConfigMap entries
   # files: {}
 
-  ## Grafana dashboard URL to import
+  ## Grafana dashboard URL to import (this should be a JSON file, not the HTML page)
+  # Example:
+  # dashboards: {
+  #   Prometheus_Stats.json: https://grafana.com/api/dashboards/2/revisions/2/download,
+  #   Docker_Dashboard.json: https://grafana.com/api/dashboards/179/revisions/5/download,
+  #   MyPrivateDashboard.json: http://example.com/dashboard.json
+  # }
   # dashboards: {}
 
   ## Specify the Job policy
