--- a/stable/redis/values.yaml
+++ b/stable/redis/values.yaml
@@ -40,6 +40,10 @@ args:
 persistence:
   enabled: true
 
+  ## The path the volume will be mounted at, useful when using different
+  ## Redis images.
+  path: /bitnami
+
   ## A manually managed Persistent Volume and Claim
   ## Requires persistence.enabled: true
   ## If defined, PVC must be created manually before volume will be bound
