--- a/incubator/jaeger/templates/common-cm.yaml
+++ b/incubator/jaeger/templates/common-cm.yaml
@@ -12,8 +12,9 @@ data:
   cassandra.contact-points: {{ template "cassandra.contact_points" . }}
   cassandra.datacenter.name: {{ .Values.cassandra.config.dc_name | quote }}
   cassandra.keyspace: {{ printf "%s_%s" "jaeger_v1" .Values.cassandra.config.dc_name | quote }}
+  cassandra.port: {{ .Values.storage.cassandra.port | quote }}
   cassandra.schema.mode: {{ .Values.schema.mode | quote }}
-  cassandra.servers: {{ template "cassandra.fullname" . }}
+  cassandra.servers: {{ template "cassandra.host" . }}
   collector.host-port: {{ template "jaeger.collector.host-port" . }}
   collector.http-port: {{ .Values.collector.service.httpPort | quote }}
   collector.port: {{ .Values.collector.service.tchannelPort | quote }}
@@ -40,7 +41,6 @@ data:
   # cassandra.connections-per-host:
   # cassandra.max-retry-attempts:
   # cassandra.password:
-  # cassandra.port:
   # cassandra.proto-version:
   # cassandra.socket-keep-alive:
   # cassandra.timeout:
