--- a/incubator/jaeger/templates/common-cm.yaml
+++ b/incubator/jaeger/templates/common-cm.yaml
@@ -18,7 +18,9 @@ data:
   collector.http-port: {{ .Values.collector.service.httpPort | quote }}
   collector.port: {{ .Values.collector.service.tchannelPort | quote }}
   collector.zipkin.http-port: {{ .Values.collector.service.zipkinPort | quote }}
+  es.password: {{ .Values.storage.elasticsearch.password }}
   es.server-urls: {{ template "elasticsearch.client.url" . }}
+  es.username: {{ .Values.storage.elasticsearch.user }}
   hotrod.agent-host: {{ template "jaeger.hotrod.tracing.host" . }}
   hotrod.agent-port: {{ .Values.hotrod.tracing.port | quote }}
   span-storage.type: {{ .Values.storage.type | quote }}
@@ -59,9 +61,7 @@ data:
   # es.max-span-age:
   # es.num-replicas:
   # es.num-shards:
-  # es.password:
   # es.sniffer:
-  # es.username:
   # http-server.host-port:
   # log-level:
   # metrics-backend:
