--- a/incubator/jaeger/templates/spark-cronjob.yaml
+++ b/incubator/jaeger/templates/spark-cronjob.yaml
@@ -59,6 +59,16 @@ spec:
                 configMapKeyRef:
                   name: {{ template "jaeger.fullname" . }}
                   key: es.server-urls
+            - name: ES_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "jaeger.fullname" . }}
+                  key: es.password
+            - name: ES_USERNAME
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "jaeger.fullname" . }}
+                  key: es.username
             {{- end }}
             resources:
             {{ toYaml .Values.spark.resources | indent 10 }}
