--- a/stable/mongodb/values.yaml
+++ b/stable/mongodb/values.yaml
@@ -29,6 +29,11 @@ serviceType: ClusterIP
 ##
 persistence:
   enabled: true
+  ## A manually managed Persistent Volume and Claim
+  ## Requires persistence.enabled: true
+  ## If defined, PVC must be created manually before volume will be bound
+  # existingClaim:
+
   ## mongodb data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
