--- a/stable/spark/templates/spark-zeppelin-deployment.yaml
+++ b/stable/spark/templates/spark-zeppelin-deployment.yaml
@@ -9,11 +9,12 @@ metadata:
     component: "{{ .Release.Name }}-{{ .Values.Zeppelin.Component }}"
 spec:
   ports:
-    - port: {{ .Values.Zeppelin.ServicePort }}
+    - name: http
+      port: {{ .Values.Zeppelin.ServicePort }}
       targetPort: {{ .Values.Zeppelin.ContainerPort }}
   selector:
     component: "{{ .Release.Name }}-{{ .Values.Zeppelin.Component }}"
-  type: "LoadBalancer"
+  type: {{ .Values.Zeppelin.ServiceType }}
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -46,6 +47,7 @@ spec:
           args: ["sed -i.bak s/spark-master:7077/{{ template "master-fullname" . }}:{{ .Values.Master.ServicePort }}/g /opt/zeppelin/conf/zeppelin-env.sh; /opt/zeppelin/bin/docker-zeppelin.sh"]
           ports:
             - containerPort: {{ .Values.Zeppelin.ContainerPort }}
+              name: http
           resources:
             requests:
               cpu: "{{ .Values.Zeppelin.Cpu }}"
