--- a/stable/spark/values.yaml
+++ b/stable/spark/values.yaml
@@ -15,6 +15,8 @@ Master:
   ContainerPort: 7077
   # Set Master JVM memory. Default 1g
   # DaemonMemory: 1g
+  # Set service type. Default LoadBalancer
+  # ServiceType: ClusterIP
 
 WebUi:
   Name: webui
@@ -44,3 +46,23 @@ Zeppelin:
   Cpu: "100m"
   ServicePort: 8080
   ContainerPort: 8080
+  # Set service type. Default LoadBalancer
+  # ServiceType: NodePort
+  Ingress:
+    Enabled: false
+    Path: "/"
+    Tls: []
+  #    - Hosts:
+  #    SecretName: zeppelin
+  # Used to create an Ingress record.
+  # Hosts:
+  # - example.local
+  # Annotations:
+  #   kubernetes.io/ingress.class: nginx
+  #   kubernetes.io/tls-acme: "true"
+  # Tls:
+  #   Enabled: true
+  # Secrets must be manually created in the namespace.
+  #   SecretName: example-tls
+  #   Hosts:
+  #   - example.local
