--- a/stable/jenkins/values.yaml
+++ b/stable/jenkins/values.yaml
@@ -35,7 +35,8 @@ Master:
   # NodePort: <to set explicitly, choose port between 30000-32767
   ContainerPort: 8080
   # Enable Kubernetes Liveness and Readiness Probes
-  HealthProbes: false
+  HealthProbes: true
+  HealthProbesTimeout: 120
   SlaveListenerPort: 50000
   LoadBalancerSourceRanges:
   - 0.0.0.0/0
