--- a/incubator/ibm-blockchain-network/templates/composer-pvc.yaml
+++ b/incubator/ibm-blockchain-network/templates/composer-pvc.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 metadata:
   name: {{ template "ibm-blockchain-composer-pvc.name" . }}
   labels:
-    app: {{ template "ibm-blockchain-composer-pvc.name" . }}
+    app: {{ template "ibm-blockchain-network.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -24,15 +24,14 @@ apiVersion: v1
 metadata:
   name: {{ template "ibm-blockchain-composer-pvc.name" . }}
   labels:
-    app: {{ template "ibm-blockchain-composer-pvc.name" . }}
+    app: {{ template "ibm-blockchain-network.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-{{- if .Values.persistence.storageClass }}
-  annotations:
-    volume.beta.kubernetes.io/storage-class: {{ .Values.persistence.storageClass }}
-{{- end }}
 spec:
+{{- if .Values.persistence.storageClass }}
+  storageClassName: {{ .Values.persistence.storageClass }}
+{{- end }}
   accessModes:
     - ReadWriteMany
   resources:
