[incubator/webpagetest-agent] - forked the agent container while we wait for upstream to tag more reliably

--- a/incubator/webpagetest-agent/values.yaml
+++ b/incubator/webpagetest-agent/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-  repository: webpagetest/agent
-  tag: latest
+  repository: timothyclarke/wptagent
+  tag: 2018-01-08
   pullPolicy: IfNotPresent
 
 agent:
