Tweaked oauth-proxy deployment template to accept boolean extraArgs
* Prior to this commit, values.yaml extraArgs only allowed setting of
  `key=value` pairs.  However, some oauth2_proxy flags are boolean
  flags with only `key` and no `value`.  In the example below,
  `ssl-insecure-skip-verify` is one such flag.

  extraArgs:
    provider: "oidc"
    ssl-insecure-skip-verify:
    cookie-secure: "true"

* This commit allows boolean flags to be added to extraArgs as shown
  above by `ssl-insecure-skip-verify`.

--- a/incubator/oauth-proxy/templates/deployment.yaml
+++ b/incubator/oauth-proxy/templates/deployment.yaml
@@ -28,7 +28,11 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         args:
         {{- range $key, $value := .Values.extraArgs }}
+          {{- if $value }}
           - --{{ $key }}={{ $value }}
+          {{- else }}
+          - --{{ $key }}
+          {{- end }}
         {{- end }}
         env:
         - name: OAUTH2_PROXY_CLIENT_ID
