Publish Voyager 5.0.0-rc.11

--- a/stable/voyager/values.yaml
+++ b/stable/voyager/values.yaml
@@ -3,15 +3,15 @@
 ##
 operator:
   image: appscode/voyager
-  imageTag: 5.0.0-rc.3
+  imageTag: 5.0.0-rc.11
 ## Docker image containing HAProxy binary
 haproxy:
   image: appscode/haproxy
-  imageTag: 1.7.9-5.0.0-rc.3
+  imageTag: 1.7.9-5.0.0-rc.11
 ## Docker image containing Prometheus exporter
 exporter:
   image: appscode/voyager
-  imageTag: 5.0.0-rc.3
+  imageTag: 5.0.0-rc.11
 ## Optionally specify an array of imagePullSecrets.
 ## Secrets must be manually created in the namespace.
 ## ref: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
@@ -22,7 +22,7 @@ exporter:
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
 imagePullPolicy: IfNotPresent
-## Use cloud provider here. Read details https://github.com/appscode/voyager/blob/master/docs/user-guide/README.md
+## Use cloud provider here.
 cloudProvider:
 ## The path to the cloud provider configuration file. Empty string for no configuration file.
 ## ie. for azure use /etc/kubernetes/azure.json
