--- a/incubator/logstash/templates/deployment.yaml
+++ b/incubator/logstash/templates/deployment.yaml
@@ -38,6 +38,8 @@ spec:
               value: {{ .Values.elasticsearch.port | quote }}
             - name: SYSLOG_PORT
               value: {{ .Values.service.internalPort | quote }}
+            - name: LS_JAVA_OPTS
+              value: "-Xms{{ .Values.heapSize }} -Xmx{{ .Values.heapSize }}"
           volumeMounts:
             - name: config
               mountPath: /usr/share/logstash/config/logstash.yml
